--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 *{
     margin: 0;
     padding: 0;
@@ -74,7 +76,21 @@ header .textos-header{
 }
 
 .div-titulo h1{
-    font-weight: 300;
+    font-size: 5em;
+    font-weight: 500;
+    color: blue;
+    letter-spacing: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: 0.5s;
+}
+
+h1:hover {
+  color: #FFFFFF;
+  text-shadow: 0 0 5px #03e9f4,
+            0 0 25px #03e9f4,
+            0 0 50px #03e9f4,
+            0 0 100px #03e9f4;
 }
 
 .contenedor{
